fix: changes to help page: greyed out background covers whole page, properly centered popup boxes

--- a/frontend/src/assets/styles/Help.module.css
+++ b/frontend/src/assets/styles/Help.module.css
@@ -81,7 +81,7 @@ body {
 /*------------------------------ LOW ------------------------------*/
 .lowBar {
   position: absolute;
-  top: 365px;
+  top: 385px;
   min-height: 330px;
   height: 500px;
   width: 100vw;
@@ -356,13 +356,14 @@ body {
 }
 
 .overlay {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vw;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.4);
   top: 0px;
   bottom: 0px;
   left: 0px;
+  z-index: 15;
 }
 
 .contactContainer {
@@ -395,9 +396,9 @@ body {
   max-width: 700px;
   width: 100%;
   position: fixed;
-  top: 65%;
+  margin-top: calc(50vh - 180px);
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   /* display: flex; */
   background-color: white;
   box-shadow: 0px 0px 18px 0px rgba(7, 55, 99, 0.9);
